set theme to minimal

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,7 +24,7 @@ url: "http://thereblight.github.io" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
