--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: 오재환의 작업
+title: 작업 목록_오재환
 email: ilovesleepgm@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   오재환의 작업 목록과 설명
