--- a/docs/_data/menu.yml
+++ b/docs/_data/menu.yml
@@ -18,7 +18,7 @@ entries:
 
   - title: posts by category
     post_list:
-      category: exhibition
+      category: 전시
       show_more: true
       show_more_text: See more posts...
       show_more_url: example2-archive.html
