menu page rewrite

--- a/docs/_data/menu.yml
+++ b/docs/_data/menu.yml
@@ -2,9 +2,15 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
-  - title: 전시
-    post_list:
-      category: 전시
-      show_more: false
-      # show_more_text: See more posts...
-      # show_more_url: example2-archive.html
+  - title: 작업들
+    entries:
+    - title: 전시
+      post_list:
+        category: 전시
+        show_more: false
+        # show_more_text: See more posts...
+        # show_more_url: example2-archive.html
+  - title: 링크
+    entries:
+    - title: 유튜브 채널
+      url: https://www.youtube.com/@jhwan_music
